Fixed long block code scrollbar

--- a/client/scss/components/markdown-content.scss
+++ b/client/scss/components/markdown-content.scss
@@ -256,7 +256,7 @@
 		padding: 20px 20px 20px 13px;
 		font-family: $core-font-monospace;
 		white-space: pre;
-    overflow-x: scroll;
+    overflow-x: auto;
 
 		> code {
 			border-radius: 5px;
